# Chess

./: README.md
Satranc/: CMakeLists.txt  Satranc.cpp  improve.cpp  main.cpp
